--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@
         <input class="tab-input" name="tab" type="radio" id="sign-in" checked>
         <label class="tab-label" for="sign-in">Войти</label>
         <div class="tab-content">
-          <form id="login" class="ui large form">
+          <form id="login" class="ui large form" autocomplete="off">
             <div class="ui stacked segment">
               <div class="field">
                 <div class="ui left icon input">
@@ -33,7 +33,7 @@
               </div>
               <button class="ui fluid large violet submit button">Войти</button>
             </div>
-            <div class="ui message negative" style="display: block;">Неверный логин или пароль.</div>
+            <div class="ui message negative">Неверный логин или пароль.</div>
           </form>
         </div>
       </li>
@@ -41,7 +41,7 @@
         <input class="tab-input" name="tab" type="radio" id="sign-up">
         <label class="tab-label" for="sign-up">Зарегистрироваться</label>
         <div class="tab-content">
-          <form id="register" class="ui large form">
+          <form id="register" class="ui large form" autocomplete="off">
             <div class="ui stacked segment">
               <div class="field">
                 <div class="ui left icon input">
