Диплом основы js

--- a/public/login.html
+++ b/public/login.html
@@ -33,7 +33,7 @@
               </div>
               <button class="ui fluid large violet submit button">Войти</button>
             </div>
-            <div class="ui message negative">Неверный логин или пароль.</div>
+            <div class="ui message negative" style="display: none;">Неверный логин или пароль.</div>
           </form>
         </div>
       </li>
@@ -57,7 +57,7 @@
               </div>
               <button class="ui fluid large violet submit button">Зарегистрироваться</button>
             </div>
-            <div class="ui message negative">Сообщений нет.</div>
+            <div class="ui message negative" style="display: none;">Сообщений нет.</div>
           </form>
         </div>
       </li>
